<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoImcActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/EdadView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:text="@string/EdadTV"
        app:layout_constraintBottom_toTopOf="@+id/PesoTeVi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/edadTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/EdadDatoTextView"
        app:layout_constraintBottom_toTopOf="@+id/PesoDatoTV"
        app:layout_constraintEnd_toStartOf="@+id/altura"
        app:layout_constraintStart_toEndOf="@+id/EdadView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/PesoTeVi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="1dp"
        android:text="@string/pesoTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EdadView" />

    <TextView
        android:id="@+id/PesoDatoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/PesoDatoTV"
        app:layout_constraintBottom_toBottomOf="@+id/PesoTeVi"
        app:layout_constraintEnd_toStartOf="@+id/ImcTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/PesoTeVi" />

    <TextView
        android:id="@+id/altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/alturaTV"
        app:layout_constraintBottom_toTopOf="@+id/PesoDatoTV"
        app:layout_constraintStart_toEndOf="@+id/edadTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ImcTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/ImcTV"
        app:layout_constraintStart_toEndOf="@+id/PesoDatoTV"
        app:layout_constraintTop_toTopOf="@+id/PesoDatoTV" />

    <TextView
        android:id="@+id/AlturaTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/AlturaDatoTV"
        app:layout_constraintBottom_toTopOf="@+id/PesoDatoTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/altura"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ImcDatoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ImcDatoTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ImcTV"
        app:layout_constraintTop_toBottomOf="@+id/AlturaTV" />

    <Button
        android:id="@+id/GrabarDatosButton"
        android:layout_width="238dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="8dp"
        android:onClick="GrabarDatos"
        android:text="@string/grabar_datos"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImcDatoTV" />

    <Button
        android:id="@+id/RegresaButton"
        android:layout_width="238dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="RegresarIMC"
        android:text="@string/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GrabarDatosButton"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:id="@+id/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="241dp"
        android:text="@string/nombre"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/NombreEdiText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NombreEdiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="@string/nombreEditText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/Apellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombre"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/Apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="241dp"
        android:text="@string/apellidos"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ApellidosEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NombreEdiText" />

    <EditText
        android:id="@+id/ApellidosEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="320dp"
        android:ems="10"
        android:hint="@string/escribirApellidos"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NombreEdiText"
        app:layout_constraintVertical_bias="0.666"
        tools:targetApi="o" />

    <Button
        android:id="@+id/GrabarDatosBueno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="283dp"
        android:onClick="GrabarDatosBD"
        android:text="@string/escribir_en_fichero"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApellidosEditText"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>